--- a/app/explore2/css/conzept/common.css
+++ b/app/explore2/css/conzept/common.css
@@ -49,6 +49,12 @@ body.dark #fullscreenToggle, body.dark #scrollToTop, body.dark #sidebarToggle {
   cursor: w-resize;
 }
 
+/*
+#minimizeLeftPanesToggle {
+  direction: initial !important;
+}
+*/
+
 #queryTitle {
   position: fixed;
   top: 25px;
