common app background

--- a/app/commons/css/style.css
+++ b/app/commons/css/style.css
@@ -4,7 +4,7 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: "Hind", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-  background: #f6f6f6;
+  background: #fbfaf9;
 }
 
 h1 {
