--- a/app/quiz/choice/src/app.css
+++ b/app/quiz/choice/src/app.css
@@ -30,6 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: #fbfaf9;
 }
 
 h1 {
@@ -44,7 +45,7 @@ h1 {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0.4rem;
   text-align: center;
 }
 
