--- a/app/quiz/choice/src/app.css
+++ b/app/quiz/choice/src/app.css
@@ -61,7 +61,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: black;
 }
 button:focus,
 button:focus-visible {
@@ -78,5 +78,6 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+    border-width: 0.2em;
   }
 }
