--- a/app/explore2/libs/lc/css/lc_lightbox.css
+++ b/app/explore2/libs/lc/css/lc_lightbox.css
@@ -685,7 +685,7 @@
 	bottom: -1px;
     z-index: 5;
 	border-radius: 3px;
-	opcity: 0;
+	opacity: 0;
 	background: #6f6f6f;
 	
 	-webkit-transition: all .2s ease;
