country maps for language and religion

--- a/app/quiz/choice/src/app.css
+++ b/app/quiz/choice/src/app.css
@@ -15,6 +15,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+.reload {
+  padding: 0.6em;
+}
+
 .loader {
   display:none;
 }
@@ -91,13 +95,14 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: .3em 0.5em;
+  font-size: 1.2em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color .25s;
+  letter-spacing: 0.05em;
 }
 button:hover {
   border-color: black;
