--- a/app/commons-sparql/css/style.css
+++ b/app/commons-sparql/css/style.css
@@ -124,6 +124,7 @@ button:hover {
   font-size: 1.5em;
   text-align: center;
   line-height: 0.7em;
+  margin-bottom: 0.2em;
 }
 #imagesDepicting {
   font-size: 1.2em;
