--- a/app/table/css/main.css
+++ b/app/table/css/main.css
@@ -15,6 +15,29 @@ body {
   font-weight: bold;
 }
 
+table {
+  counter-reset: rowNumber;
+}
+
+table tr > td:first-child {
+  counter-increment: rowNumber;
+}
+
+table tr td:first-child::before {
+  content: counter(rowNumber);
+  min-width: 1em;
+  margin-right: 2.5em;
+  border: 1px solid black;
+  border-radius: 0.2em;
+  padding: 0em 0.5em;
+}
+
+/*
+td a {
+  display: block; width: 100%; height: 100%;
+}
+*/
+
 div.material-table {
   padding: 0;
 }
