--- a/app/explore2/libs/lc/css/lc_lightbox.css
+++ b/app/explore2/libs/lc/css/lc_lightbox.css
@@ -9,6 +9,16 @@
 	font-style: normal;
 }
 
+div#status {
+  display: none;
+  position: absolute;
+  color: white;
+  z-index: 999;
+  top: 4em;
+  left: 1em;
+  font-size: small;
+}
+
 .bounding-box {
   position: absolute;
   box-sizing: border-box;
